# wayland-debug

./: .gitignore  LICENSE  ast.py  conftest.py  gdb_interface.py  gdb_runner.py  libwayland_debug_symbols.md  main.py  matcher.py  matchers.md  mypy.ini  parse_wl_debug.py  protocol.py  protocol_enums.py  readme.md  run_tests.py  session.py  update-protocols.sh  util.py  wayland-debug.py  wl_data.py
backends/: __init__.py
command_ui/: __init__.py  command_sink.py  controller.py  persistent_ui_state.py
connection/: __init__.py  connection.py  connection_impl.py  connection_list.py  connection_manager.py  message_sink.py  name_generator.py  object_db.py
core/: __init__.py  connection_impl.py  connection_manager.py  letter_id_generator.py  matcher.py  name_generator.py  persistent_ui_state.py  util.py
frontends/: __init__.py
gdb_integration/: __init__.py  extract.py  libwayland_symbols.py  plugin.py  runner.py
interfaces/: __init__.py  command_sink.py  connection.py  connection_id_sink.py  connection_list.py  object_db.py  ui_state.py
libwayland_logs/: __init__.py  parse.py  terminal_ui.py
output/: __init__.py  output.py  stream.py
protocol/: parser.py
resources/: get-libwayland.sh  remove-libwayland-build-files.sh  update-protocols.sh
session/: __init__.py  connection_manager.py  message_sink.py  session.py
test/: integration_helpers.py  integration_test.py  protocols_test.py  test_disseminator.py  test_util.py  (+1 more)
test/mock_program/: client_args.c  client_args.h  common.c  common.h  main.c  meson.build  mock_client.c  mock_program.h  mock_server.c
(+89 files in other folders)
